# ai-sdk

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  package.json
crates/ai-sdk/: Cargo.toml
crates/core/: Cargo.toml
crates/providers/: Cargo.toml
crates/providers/src/: errors.rs  input_builder.rs  lib.rs  openai.rs  provider.rs  request.rs
crates/providers/src/openai/: client.rs  constants.rs  errors.rs  request.rs  response.rs  types.rs
crates/providers/src/openai/common/: computer_tool_call_item.rs  file_search_tool_item.rs  function_tool_call_item.rs  output_message_item.rs  reasoning_item.rs  status.rs  text.rs  tool.rs  tool_choice.rs  web_search_tool_call_item.rs
crates/providers/src/openai/request/: include.rs  input.rs  reasoning.rs  service_tier.rs  tool_choice.rs  truncation.rs
crates/providers/src/openai/request/input/: common.rs  input_message.rs  input_reference.rs  item.rs
crates/providers/src/openai/request/input_models/: common.rs  input_message.rs  input_reference.rs  item.rs
crates/providers/src/openai/response/: incomplete_details.rs  response_error.rs  response_output.rs  usage.rs
crates/providers/src/openai/response/events/: streaming.rs
crates/providers/src/request/: include.rs  input.rs  reasoning.rs  service_tier.rs  text.rs  tool.rs  tool_choice.rs  truncation.rs
crates/providers/src/request/input/: common.rs  input_message.rs  input_reference.rs  item.rs
crates/providers/src/util/: include.rs  input.rs  reasoning.rs  service_tier.rs  text.rs  tool.rs  tool_choice.rs  truncation.rs
crates/providers/src/utils/: errors.rs  provider_strategy.rs
crates/providers/tests/: openai.rs
crates/providers/tests/openai/: generating.rs  streaming.rs
crates/utils/: Cargo.toml
crates/utils/src/: provider.rs
