[workspace]
members = [ 
  "crates/core", 
  "crates/providers",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio-stream = "0.1.17"
reqwest = { version = "0.12.15", features = ["json"] }
async-trait = "0.1.73"
bytes = "1.4.0"
futures = "0.3.28"
tokio = { version = "1.45.0", features = ["full"] }
dotenv = "0.15.0"

ai-providers = { path = "crates/providers" }