[package]
name = "ai-sdk"
version = "0.0.1"
edition = "2021"
description = "A modular and composable AI SDK built in Rust."
license = "MIT"
repository = "https://github.com/cupolalabs/ai-sdk"
homepage = "https://github.com/cupolalabs/ai-sdk"
readme = "../../README.md"
keywords = ["AI", "SDK"]
categories = ["api-bindings", "science"]
publish = true

[dependencies]
ai-providers = "0.0.1"