[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utils = { path = "../utils" }
tokio-stream = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json"] }
async-trait = "0.1.73"
bytes = "1.4.0"
futures = "0.3.28"