[package]
name = "ai-providers"
version = "0.0.1"
edition = "2021"
description = "A comprehensive collection of AI provider implementations, schematics, and API integrations for various AI services"
license = "MIT"
repository = "https://github.com/cupolalabs/ai-sdk"
homepage = "https://github.com/cupolalabs/ai-sdk"
readme = "../../README.md"
keywords = ["AI", "providers", "openai", "gemini", "claude", "gpt"]
categories = ["api-bindings"]
publish = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
reqwest = { workspace = true, features = ["stream", "json"] }
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros"] }